# ipc

./: .gitignore  Makefile.am  README.md  conditional.c  conditional.h  configure.ac  ipc.c  ipc.h  ipc.pc.in  ipc_helper.c  ipc_helper.h  ipc_lb_make.mk  ipc_make.mk  ipc_makefile.mk  ipc_posix.c  ipc_posix.h  ipc_pthread.c  ipc_pthread.h  ipc_types.h  mail.c  mail.h  mail_payload.c  mail_payload.h  mailbox.c  mailbox.h  mutex.c  mutex.h  publisher.c  publisher.h  sem.h  semaphore.c  semaphore.h  thread.c  thread.h  thread_ext.h  tmr.c  tmr.h  uptime.c  uptime.h  worker.c  (+1 more)
conditional/: conditional.c  conditional.h  conditional_make.mk  linux_conditional.c  linux_conditional.h
conditional/_set/: mutex.h.txt
ipc/: conditional.c  conditional.h  ipc.c  ipc.h  ipc.xml  ipc_ext.h  ipc_helper.c  ipc_helper.h  ipc_light.c  ipc_light.h  ipc_linux.c  ipc_make.mk  mail.c  mail.h  mail_payload.c  mail_payload.h  mailbox.c  mailbox.h  mutex.c  mutex.h  publisher.c  publisher.h  sem.h  semaphore.c  thread.c  thread.h  tmr.c  tmr.h  worker.c  worker.h
ipc/_set/: ipc_set.h.txt
ipc/barrier/: barrier-internal.h  barrier.c  barrier.h  barrier.xml
ipc/clock/: clock-internal.h  clock.c  clock.h  clock.xml
ipc/common/: ipc_types.h
ipc/conditional/: conditional-internal.h  conditional.c  conditional.h  conditional.xml
ipc/factory/: ipcfactory-internal.h  ipcfactory.c  ipcfactory.h  ipcfactory.xml
ipc/helper/: ipchelper-internal.h  ipchelper.c  ipchelper.h  ipchelper.xml
ipc/mail/: mail-internal.h  mail.c  mail.h  mail.xml
ipc/mailbox/: cbk.xml  mailbox-internal.h  mailbox.c  mailbox.h  mailbox.xml  mailboxcbk-internal.h  mailboxcbk.c  mailboxcbk.h
ipc/mutex/: mutex-internal.h  mutex.c  mutex.h  mutex.xml
ipc/publisher/: publisher.c  publisher.h  publisher.xml  publishersingleton-internal.h  publishersingleton.c  publishersingleton.h
ipc/semaphore/: semaphore-internal.h  semaphore.c  semaphore.h  semaphore.xml
ipc/thread/: cbk.xml  thread-internal.h  thread.c  thread.h  thread.xml  threadcbk-internal.h  threadcbk.c  threadcbk.h
ipc/timer/: timer-internal.h  timer.c  timer.h  timer.xml
ipc/worker/: worker-internal.h  worker.c  worker.h  worker.xml  worker_mailist.h
ipc_decorator/: ipc_decorator.c  ipc_decorator.h  ipc_decorator_make.mk  ipc_linux_task.c  ipc_linux_task.h  ipc_linux_timestamp.c  ipc_linux_timestamp.h
mail/: mail.c  mail.h  mail_ext.h  mail_make.mk  mail_ringbuffer.c  mail_ringbuffer.h
mail/_set/: mail_set.h.txt
mailbox/: mailbox.c  mailbox.h  mailbox_ext.h  mailbox_make.mk  mailbox_ringbuffer.c  mailbox_ringbuffer.h  publisher.c  publisher.h
mailbox/_set/: mailbox_set.h.txt
mutex/: linux_mutex.c  linux_mutex.h  mutex.h  mutex_make.mk
pk_ipc/: ipc_makefile.mk
pk_ipc/pk_ipc_code/_inc/: ipc_ext.h  ipc_light.h
pk_ipc/pk_ipc_code/_set/: ipc_set.h.txt  ipc_task_ids.h.txt
pk_ipc/pk_ipc_code/_src/: ipc.c  ipc.cpp  ipc_light.c
pk_ipc/pk_ipc_user/: ipc.h  ipc_evs.h  ipc_types.h  ipc_uext.h
pk_ipc/pk_ipc_user/_set/: ipc_uset.h.txt
pk_ipc_decorator/: ipc_decorator_makefile.mk
pk_ipc_decorator/pk_ipc_decorator_code/_inc/: ipc_linux_task.h  ipc_linux_timestamp.h
pk_ipc_decorator/pk_ipc_decorator_code/_set/: ipc_decorator_set.h.txt
pk_ipc_decorator/pk_ipc_decorator_code/_src/: ipc_decorator.c  ipc_linux_task.c  ipc_linux_timestamp.c
pk_ipc_decorator/pk_ipc_decorator_user/: ipc_decorator.h  ipc_decorator_evs.h  ipc_decorator_types.h  ipc_decorator_uext.h
pk_ipc_decorator/pk_ipc_decorator_user/_set/: ipc_decorator_uset.h.txt
pk_mail/: mail_makefile.mk
pk_mail/pk_mail_code/_src/: mail.c  mail.cpp  mail_ringbuffer.c
pk_mail/pk_mail_user/: mail.h  mail_evs.h  mail_ringbuffer.h  mail_types.h  mail_uext.h
pk_mail/pk_mail_user/_set/: mail_uset.h.txt
pk_mailbox/: mailbox_makefile.mk
pk_mailbox/pk_mailbox_code/_inc/: mailbox_ext.h  mailbox_ringbuffer.h  publisher_ext.h
pk_mailbox/pk_mailbox_code/_src/: mailbox.c  mailbox.cpp  mailbox_ringbuffer.c  publisher.c
pk_mailbox/pk_mailbox_user/: mailbox.h  mailbox_evs.h  mailbox_types.h  mailbox_uext.h  publisher.h
pk_mailbox/pk_mailbox_user/_set/: mailbox_uset.h.txt
pk_publisher/: publisher_makefile.mk
pk_publisher/pk_publisher_code/_inc/: publisher_ext.h
pk_publisher/pk_publisher_code/_set/: publisher_set.h.txt
pk_publisher/pk_publisher_code/_src/: publisher.c  publisher.cpp
pk_publisher/pk_publisher_user/: publisher.h  publisher_evs.h  publisher_types.h  publisher_uext.h
pk_publisher/pk_publisher_user/_set/: publisher_uset.h.txt
pk_system_clk/: system_clk_makefile.mk
pk_system_clk/pk_system_clk_code/_inc/: system_clk_ext.h
pk_system_clk/pk_system_clk_code/_set/: system_clk_set.h.txt
pk_system_clk/pk_system_clk_user/: clk_timer.h  system_clk.h  system_clk_evs.h  system_clk_types.h  system_clk_uext.h
pk_task/: task_makefile.mk
pk_task/pk_task_user/: task.h  task_evs.h  task_stack.h  task_types.h  task_uext.h
pk_worker/: worker_makefile.mk
pk_worker/pk_worker_user/: worker.h  worker_evs.h  worker_types.h  worker_uext.h
task/: task.c  task.h  task_ext.h  task_make.mk
task/_set/: task_set.h.txt
tst/: mailist.h  test.xml
tst/ipc_gtests/: ipc_gtest.cc  ipc_mail_gtest.cc  ipc_mailbox_gtest.cc  ipc_publisher_gtest.cc  ipc_thread_gtest.cc
tst/ipcgtestworker/: ipcgtestworker-internal.h  ipcgtestworker-test.cc  ipcgtestworker.c  ipcgtestworker.h  ipcgtestworker_mailist.h  worker.xml
tst/mock/: barriermock-internal.h  barriermock.cc  barriermock.h  barriermock.xml  cvmock-internal.h  cvmock.cc  cvmock.h  cvmock.xml  gmock-barrier.h  gmock-cv.h  gmock-ipcmock.h  gmock-mailbox.h  gmock-mux.h  gmock-thread.h  helpermock-internal.h  helpermock.cc  helpermock.h  helpermock.xml  ipcfactorymock-internal.h  ipcfactorymock.cc  ipcfactorymock.h  ipcfactorymock.xml  mailboxmock-internal.h  mailboxmock.cc  mailboxmock.h  mailboxmock.xml  muxmock-internal.h  muxmock.cc  muxmock.h  muxmock.xml  threadmock-internal.h  threadmock.cc  threadmock.h  threadmock.xml
worker/: worker.c  worker.h  worker_evs.h  worker_make.mk
worker/_set/: worker_set.h.txt
(+12 files in other folders)
